# CUDA-Playground

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.asdf/cuda/: memory.cc
app/: CMakeLists.txt  main.cc  main.cpp
include/mylib/bench/: bench.hpp
include/mylib/cuda/: memory.hpp
include/mylib/lucky7/: lucky7.h
include/mylib/type/: result.hpp
lib/: CMakeLists.txt  shape.cc
lib/bench/: bench.cpp
lib/cuda/: memory.cpp
lib/lucky7/: lucky7.cc
test/: CMakeLists.txt
